# palctl

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run-daemon.bat  run-gui.bat
.claude/skills/verify/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: VERSIONING.md  discord.md  install-design.md
packaging/: README.md  build.ps1  cli_entry.py  daemon_entry.py  gui_entry.py  installer.iss  make_icon.py  palctl.spec
packaging/winget/: SteveWeed79.palctl.installer.yaml  SteveWeed79.palctl.locale.en-US.yaml  SteveWeed79.palctl.yaml
palctl/: __init__.py  alerts.py  api.py  backups.py  bot.py  cli.py  client.py  config.py  control.py  daemon.py  dashboard.html  diagnostics.py  discovery.py  events.py  fetch.py  firewall.py  healthcheck.py  inifile.py  leak.py  localauth.py  logging_setup.py  netinfo.py  preflight.py  procs.py  profiles.py  rclone.py  scheduler.py  selfupdate.py  serversetup.py  setup_flow.py  startup.py  steamcmd.py  systemd.py  watchdog.py  winservice.py  wintask.py
palctl/gui/: icons.py  main.py  settings_editor.py  widgets.py  wizard.py
palctl/gui/icons/: README.md
scripts/: import_smoke.py
tests/: test_alerts.py  test_api_integration.py  test_backups.py  test_bot.py  test_bot_perms.py  test_cli.py  test_config.py  test_control.py  test_daemon_helpers.py  test_diagnostics.py  test_discovery.py  test_events.py  test_fetch.py  test_firewall.py  test_healthcheck.py  test_inifile.py  test_leak.py  test_localauth.py  test_logging_setup.py  test_netinfo.py  test_preflight.py  test_procs.py  test_profiles.py  test_rclone.py  test_scheduler.py  test_scheduler_ops.py  test_selfupdate.py  test_serversetup.py  test_setup_flow.py  test_startup.py  test_steamcmd.py  test_systemd.py  test_watchdog.py  test_winservice.py  test_wintask.py
