[project]
name = "palctl"
version = "0.1.0"
description = "REST-native Palworld dedicated server control for Windows: memory-leak watchdog, settings editor, self-hosted Discord bot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "httpx>=0.27",
  "psutil>=6.0",
  "keyring>=25.0",
  "aiohttp>=3.10",
  "discord.py>=2.4",
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
palctl-daemon = "palctl.daemon:main"
palctl-gui = "palctl.gui.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["palctl*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
