[project]
name = "palctl"
dynamic = ["version"]  # single source: palctl/__init__.py
description = "REST-native Palworld dedicated server control for Windows: memory-leak watchdog, settings editor, self-hosted Discord bot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "httpx>=0.27",
  "psutil>=6.0",
  "keyring>=25.0",
  "aiohttp>=3.10",
  "discord.py>=2.4",
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
palctl = "palctl.cli:main"
palctl-daemon = "palctl.daemon:main"
palctl-gui = "palctl.gui.main:main"

[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# The git tag IS the version — nothing to bump in code, so a tag can never
# disagree with the shipped version. setuptools-scm writes the resolved version
# into palctl/_version.py at build/install time; palctl/__init__.py reads it.
version_file = "palctl/_version.py"

[tool.setuptools.packages.find]
include = ["palctl*"]

[tool.setuptools.package-data]
# The web dashboard the daemon serves at / — one self-contained file.
palctl = ["dashboard.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# CI runs a bare `pytest` (not `python -m pytest`), so the repo root isn't on
# sys.path and the in-tree `palctl` package can't be imported. Put it on the
# path explicitly so the suite runs the same way everywhere.
pythonpath = ["."]
